[gd_scene load_steps=8 format=2]

[ext_resource path="res://Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Assets/frame.png" type="Texture" id=2]
[ext_resource path="res://Battle/UI/textBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/fontILabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/Introdile.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Battle/UI/selectPip.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Battle" type="Node"]

script = ExtResource( 1 )

[node name="Battlers" type="Node2D" parent="." index="0"]

[node name="AllyPos" type="Position2D" parent="Battlers" index="0" groups=[
"ally",
]]

position = Vector2( 860, 310 )
_sections_unfolded = [ "Transform" ]

[node name="AllyPos2" type="Position2D" parent="Battlers" index="1" groups=[
"ally",
]]

position = Vector2( 1050, 240 )
_sections_unfolded = [ "Transform" ]

[node name="AllyPos3" type="Position2D" parent="Battlers" index="2" groups=[
"ally",
]]

position = Vector2( 1120, 460 )
_sections_unfolded = [ "Transform" ]

[node name="FoePos" type="Position2D" parent="Battlers" index="3" groups=[
"foe",
]]

position = Vector2( 400, 300 )
_sections_unfolded = [ "Transform" ]

[node name="FoePos2" type="Position2D" parent="Battlers" index="4" groups=[
"foe",
]]

position = Vector2( 220, 220 )
_sections_unfolded = [ "Transform" ]

[node name="FoePos3" type="Position2D" parent="Battlers" index="5" groups=[
"foe",
]]

position = Vector2( 160, 440 )
_sections_unfolded = [ "Transform" ]

[node name="UI" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="proceedButton" type="Button" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 837.0
margin_top = 563.0
margin_right = 901.0
margin_bottom = 583.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Proceed"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="NPBack" type="NinePatchRect" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 614.0
margin_right = 1224.0
margin_bottom = 744.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
_sections_unfolded = [ "Margin", "Patch Margin", "Rect" ]

[node name="characterUI" type="HBoxContainer" parent="UI/NPBack" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -624.0
margin_right = 624.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor" ]

[node name="textBox" parent="UI/NPBack/characterUI" index="0" instance=ExtResource( 3 )]

margin_left = 445.0
margin_right = 802.0
margin_bottom = 160.0

[node name="stateLabel" parent="UI" index="2" instance=ExtResource( 4 )]

margin_left = 559.0
margin_top = 162.0
margin_right = 647.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 1 )

[node name="playerLabel" parent="." index="2" instance=ExtResource( 4 )]

margin_left = 830.0
margin_top = 230.0
margin_right = 876.0
margin_bottom = 243.0
text = "Player"

[node name="selectPip" parent="." index="3" instance=ExtResource( 6 )]

[connection signal="pressed" from="UI/proceedButton" to="." method="_on_proceedButton_pressed"]


